--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql": "^2.18.1",
+    "node-fetch": "^3.2.10"
   },
   "scripts": {
     "start": "nodemon ./bin/www.js",
@@ -24,5 +27,6 @@
   "bugs": {
     "url": "https://github.com/youngsuk0304/NodeJS_Backend/issues"
   },
-  "homepage": "https://github.com/youngsuk0304/NodeJS_Backend#readme"
+  "homepage": "https://github.com/youngsuk0304/NodeJS_Backend#readme",
+  "type": "module"
 }
